# rich-chat-demo

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
.dev-notes/: 2025-12-26.md  2025-12-27.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/agents/: __init__.py  explain_agent.py
backend/app/: main.py
backend/app/agents/: base.py  code_agent.py  default_agent.py  search_agent.py
backend/app/core/: __init__.py  registry.py
backend/app/routers/: __init__.py  agents.py  chat.py  health.py
backend/models/: __init__.py  schemas.py
frontend/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: useSlashCommands.test.ts
frontend/app/: globals.css  layout.tsx
frontend/app/components/: AgentBadge.tsx  ChatInput.tsx  ChatInterface.tsx  LoadingSpinner.tsx  MayaAvatar.tsx  MessageBubble.tsx  SlashCommandMenu.tsx
frontend/hooks/: useChat.ts  useSlashCommands.ts
frontend/lib/: api.ts  constants.ts  types.ts
